# huge_mess

./: .gitignore  Cargo.toml  README.md  wfc_misc.rs
assets/wgsl/: renderer_v3c1.wgsl  renderer_v4n4_debug_visualizator.wgsl
dioxus_stuff/: Cargo.toml
engine/: Cargo.toml
engine/src/: basic_loop.rs  bindgroups.rs  buffer.rs  camera.rs  common_structs.rs  core.rs  core_initializer.rs  default_things.rs  draw_commands.rs  histogram.rs  input_cache.rs  lib.rs  logger.rs  misc.rs  noise_maker.rs  pipelines.rs  prefix_sum.rs  render_pass.rs  subgroup_test.rs  texture.rs  vertex.rs  wfc_test.rs
engine/src/algorithms/: mc.rs  mod.rs
engine/src/algorithms/wgsl/: marching_cubes_indirect.wgsl
engine/src/gpu_debugger/: char_generator.rs  mod.rs  primitive_processor.rs
engine/src/gpu_debugger/wgsl/: arrow_aabb.wgsl  char_preprocessor.wgsl  numbers.wgsl
engine/src/lights/: mod.rs
engine/src/meshes/: mod.rs
engine/src/pipeline_stuff/: custom_pipelines.rs  mod.rs  pipeline_helper.rs
engine/src/shaders/: basic_noise.wgsl  mc_shader.wgsl  multi_level_scan.rs  multi_level_scan.wgsl  prefix_sum.wgsl  warp_test.wgsl
examples/: Cargo.toml
examples/aabb_numbers/src/: aabb_numbers.rs  configuration.rs
examples/mc/src/: configuration.rs  mc.rs
examples/radix/src/: configuration.rs  main.rs
examples/smoke/src/: configuration.rs  smoke.rs  smoke_pipelines.rs
examples/smoke/src/assets/wgsl/: v4n4_camera_light_tex2.wgsl
examples/wfc_part2/src/: configuration.rs  main.rs  wfc_misc.rs
examples/wfc_test/src/: configuration.rs  main.rs
src/: main.rs  smoke.rs
src/smoke/: smoke.rs
