[package]
name = "dioxus-stuff"
version = "0.1.0"
authors = ["jaankaup"]
edition = "2021"
resolver = "2"
# default-run = ""
publish = false

[dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
dioxus-html = "0.4"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false
