[package]
name = "examples"
version.workspace = true
edition.workspace = true

# [dependencies.engine]
# workspace = true

[dependencies]
wgpu.workspace = true
engine.workspace = true
winit.workspace = true
log.workspace = true
bytemuck.workspace = true
cgmath.workspace = true

[[example]]
name = "smoke"
path = "smoke/src/smoke.rs"

[[example]]
name = "mc"
path = "mc/src/mc.rs"
