[package]
name = "examples"
version.workspace = true
edition.workspace = true

# [dependencies.engine]
# workspace = true

[dependencies]
wgpu.workspace = true
engine.workspace = true
winit.workspace = true
log.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
rand.workspace = true


[[example]]
name = "smoke"
path = "smoke/src/smoke.rs"

[[example]]
name = "mc"
path = "mc/src/mc.rs"

[[example]]
name = "aabb"
path = "aabb_numbers/src/aabb_numbers.rs"

[[example]]
name = "wfc_test"
path = "wfc_test/src/main.rs"

[[example]]
name = "wfc_part2"
path = "wfc_part2/src/main.rs"
